--- a/microservices/queue-master/manifests/deployment.yaml
+++ b/microservices/queue-master/manifests/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: queue-master
-        image: m0ph/queue-master:latest
+        image: kevanto/queue-master:latest
         env:
          - name: JAVA_OPTS
            value: -Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
