--- a/microservices/orders/manifests/deployment.yaml
+++ b/microservices/orders/manifests/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
         - name: orders
-          image: m0ph/orders:latest
+          image: kevanto/orders:latest
           ports:
             - containerPort: 80
           securityContext:
