--- a/microservices/user-db/manifests/statefulset.yaml
+++ b/microservices/user-db/manifests/statefulset.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: user-db
-          image: m0ph/user-db:latest
+          image: kevanto/user-db:latest
           ports:
             - containerPort: 27017
               name: mongo
